--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>This website is a work in progress.</h1>
+    <div class="container">
+      <h1>Martinez Family Tree</h1>
+    </div>
+    <div class="person-container">
+      <div class="person">
+        <p>Tio Joe</p>
+      </div>
+      <div class="person">
+        <p>Tia Juanita</p>
+      </div>
+      <div class="person">
+        <p>Tio Ricardo</p>
+      </div>
+      <div class="person">
+        <p>Tia Rosa</p>
+      </div>
+      <div class="person">
+        <p>Tio Gilberto</p>
+      </div>
+      <div class="person">
+        <p>Tia Sally</p>
+      </div>
+      <div class="person">
+        <p>Tia Elvira</p>
+      </div>
+      <div class="person">
+        <p>Tio Carlos</p>
+      </div>
+      <div class="person">
+        <p>Tio Ruben</p>
+      </div>
+      <div class="person">
+        <p>Tio Marty</p>
+      </div>
+    </div>
   </body>
 </html>
