Added mobile detection (maybe)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <script src="mobile-detec.js"></script>
     <div class="container">
       <h1>Martinez Family Tree</h1>
     </div>
