--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div class="person-container">
       <div class="person">
-        <p>Tio Joe</p>
+        <a href="joe">Tio Joe</a>
       </div>
       <div class="person">
         <p>Tia Juanita</p>
