--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <h1>Martinez Family Tree</h1>
     </div>
     <div class="person-container">
-      <div class="person">
+      <button onclick="window.location.href='joe';" class="person">
         <a href="joe">Tio Joe</a>
-      </div>
+      </button>
       <div class="person">
         <p>Tia Juanita</p>
       </div>
