Add pages for all tios y tias

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
       <button onclick="window.location.href='joe';" class="person">
         <a href="joe">Tio Joe</a>
       </button>
-      <div class="person">
-        <p>Tia Juanita</p>
-      </div>
-      <div class="person">
-        <p>Tio Ricardo</p>
-      </div>
-      <div class="person">
-        <p>Tia Rosa</p>
-      </div>
-      <div class="person">
-        <p>Tio Gilberto</p>
-      </div>
-      <div class="person">
-        <p>Tia Sally</p>
-      </div>
-      <div class="person">
-        <p>Tia Elvira</p>
-      </div>
-      <div class="person">
-        <p>Tio Carlos</p>
-      </div>
-      <div class="person">
-        <p>Tio Ruben</p>
-      </div>
-      <div class="person">
-        <p>Tio Marty</p>
-      </div>
+      <button onclick="window.location.href='juanita';" class="person">
+        <a href="joe">Tia Juanita</a>
+      </button>
+      <button onclick="window.location.href='ricardo';" class="person">
+        <a href="joe">Tio Ricardo</a>
+      </button>
+      <button onclick="window.location.href='rosa';" class="person">
+        <a href="joe">Tia Rosa</a>
+      </button>
+      <button onclick="window.location.href='gilberto';" class="person">
+        <a href="joe">Tio Gilberto</a>
+      </button>
+      <button onclick="window.location.href='sally';" class="person">
+        <a href="joe">Tia Sally</a>
+      </button>
+      <button onclick="window.location.href='elvira';" class="person">
+        <a href="joe">Tia Elvira</a>
+      </button>
+      <button onclick="window.location.href='carlos';" class="person">
+        <a href="joe">Tio Carlos</a>
+      </button>
+      <button onclick="window.location.href='ruben';" class="person">
+        <a href="joe">Tio Ruben</a>
+      </button>
+      <button onclick="window.location.href='marty';" class="person">
+        <a href="joe">Tio Marty</a>
+      </button>
     </div>
   </body>
 </html>
