Adding Joe's and Juanita's Family Trees

--- a/joe.html
+++ b/joe.html
@@ -11,7 +11,21 @@
         </div>
         <div class="person-container">
             <div class="person">
-                <!--Child-->
+                <p>Joe</p>>
+            </div>
+            <div class="person">
+                <p>Karen<br>(Wife)</p>
+            </div>
+        </div>
+        <div class="person-container">
+            <div class="person">
+                <p>Mindy<br>(Child)</p>
+            </div>
+            <div class="person">
+                <p>Stacey<br>(Child)</p>
+            </div>
+            <div class="person">
+                <p>Jamie<br>(Child)</p>
             </div>
         </div>
     </body>
