--- a/juanita.html
+++ b/juanita.html
@@ -11,7 +11,21 @@
         </div>
         <div class="person-container">
             <div class="person">
-                <!--Child-->
+                <p>Juanita</p>
+            </div>
+            <div class="person">
+                <p>Ramiro<br>(Husband)</p>
+            </div>
+        </div>
+        <div class="person-container">
+            <div class="person">
+                <p>Maritza<br>(Child)</p>
+            </div>
+            <div class="person">
+                <p>Gabriella<br>(Child)</p>
+            </div>
+            <div class="person">
+                <p>Ramiro<br>(Child)</p>
             </div>
         </div>
     </body>
